--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 
     <dependencies>
 
+        <!--office读写操作工具-->
+        <dependency>
+            <groupId>org.hswebframework</groupId>
+            <artifactId>hsweb-expands-office</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <!--junit4-->
         <dependency>
             <groupId>junit</groupId>
