--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+        </dependency>
+
+
         <!--office读写操作工具-->
         <dependency>
             <groupId>org.hswebframework</groupId>
