--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,10 +1,10 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.99.100:3306/test?useUnicode=true&amp;characterEncoding=utf8&amp;useSSL=true
+jdbc.url=jdbc:mysql://192.168.99.100:3306/ssh?useUnicode=true&amp;characterEncoding=utf8&amp;useSSL=true
 jdbc.username=root
 jdbc.pwd=root
-hibernate.default_schema=test
+hibernate.default_schema=ssh
 hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
-validationQuery=SELECT count(id) FROM user
+validationQuery=SELECT 1
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
